[package]
name = "blk-reader"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.32.4"
bincode = "1.3.3"
serde = { version = "1.0.214", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }
signal-hook = "0.3.17"

[dev-dependencies]
chrono = "0.4.38"
